--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ section.main h1,h2{
   color: white;
   margin: 40px 0px;
   padding: 10px;
-  width: 90%;
 }
 
 section{
@@ -98,6 +97,10 @@ section{
   box-sizing: border-box;
   padding:0 10%;
   margin:0px;
+}
+
+p ol ul{
+  width: 90%;
 }
 
 .topics a img {
